# newsletter

./: Cargo.toml  docker-compose.yaml
src/: configuration.rs  main.rs  startup.rs
src/routes/: mod.rs  subscription.rs
tests/: health_check.rs
