[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Sanjay Bhattacharya <sanjbh@gmail.com>"]

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
syn = "1.0"
config = "0.15.11"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dev-dependencies]
reqwest = "0.12.19"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
